# packages/app/src/api/types.ts
@@ -1,7 +1,8 @@
-import type { components } from "@server/generated/api";
+import type { components } from "@server/_generated/api"
 
-export type Role = components["schemas"]["RoleResponseDto"];
-export type User = components["schemas"]["UserResponseDto"];
-export type AuditLog = components["schemas"]["AuditLogResponseDto"];
-export type CreateUserInput = components["schemas"]["CreateUserDto"];
-export type ReplaceUserRolesInput = components["schemas"]["ReplaceUserRolesDto"];
+export type Role = components["schemas"]["RoleResponseDto"]
+export type User = components["schemas"]["UserResponseDto"]
+export type AuditLog = components["schemas"]["AuditLogResponseDto"]
+export type CreateUserInput = components["schemas"]["CreateUserDto"]
+export type ReplaceUserRolesInput = components["schemas"]["ReplaceUserRolesDto"]
+export type UpdateUserInput = components["schemas"]["UpdateUserDto"]
